--- a/myStore/views/products.ejs
+++ b/myStore/views/products.ejs
@@ -10,6 +10,8 @@
 <body>
     <h1>Products</h1>
     <a href="/products/new">Add New Product</a> <!-- Link to the form -->
+    <a href="/sapir">Sapir</a> <!-- Link to the form -->
+
     <form id="searchForm">
         <input type="text" name="name" placeholder="Product Name">
         <input type="text" name="category" placeholder="Category">
